--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ matplotlib>=3.5.0
 mplfinance>=0.12.0
 pytest>=7.0.0
 pytest-cov>=4.0.0
+lightgbm>=3.3.0
+scikit-learn>=1.0.0
+statsmodels>=0.13.0
+schedule>=1.2.0
